kubernetes/apps/argo-system/argo-cd/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - argo.aknuk.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IHIyZnNmTFVQ
[...]
        AsFK+Cj67/X9HyI=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq1gt53jawqp8al0dmpzf39qxpmhux2g9sqdylryy0h2wqga3e0y4c4vd8f552gsnm6vpzskcpn37j4ma9vrpz2h3z926kxzynkxrysdgug5ykvx4pxvuvwm7zcgk43r3dtwnsj8demqf663j48tdx9qfa8vzd99nzcu2y8u7ej4amrw64qetj4hp776txdya5xgrfyywvp9dtun8rk3jn4y0zk5un4zjeewxegfd9vevx5cqxryxvm8dtg3ppdxgv5vfa0jwvk8l6z3h46f3w9z628sa739ddsuumkdwjg8s3c09wnl293hxz0dca9ttwztgtqhpjnj50sxu2sfxdcc3l6c7e5rw2uqjsq2dmgnmxf3v9y27edvafmgssckv6my0z9hkvzdcdafxv7pynel0xyjfan4ennwgd7j9yvg7x8ueahgjq5rh4eq5u4whzwknz0wgz4ccye2kstjazhttmqmnye [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-10-08T20:18:58Z"
  mac: ENC[AES256_GCM,data:4b9UOYFCwNi0GQEaiXWNYLxp7IN9Hd20elaPFZhizXTsFjZONwhM0+P9hykkqqe19JQvGF7e5SRhU4e2SCqJo76JZw/XxjIFCkdNhEYQJyJ7mU9bS9oOwxNhta6KFl8lqTqSTSpLoN1ueBF/iCQ2tZwRz37Yr8xH4rDox1YLNAs=,iv:xG5q4KP9G3+pm1IOBOuOLTy2G7azmwKGiDFzfumjmA4=,tag:iheNcOwckiTGiym1gdGLZw==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
