kubernetes/apps/argo-system/argo-cd/config/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - argo.aknuk.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
